Updated the code for pastix-based multi-tile alignment. Made sure that only the portions of the 'original' MAT file that will be handled by different MPI workers, and not the entire 'original' MAT file, is required by the code. This code assumes that environment variables TA_BIN and TA_DATA are defined

--- a/src/multi-tile_pastix/makefile
+++ b/src/multi-tile_pastix/makefile
@@ -1,15 +1,21 @@
-all : compile compile_split
+all : compile compile_split copy_scripts
 
 compile : align_tiles.c align_tiles.sh
 	@mkdir -p ../../bin   
-	./compile_align_multi_tiles.sh
+	./compile_align_tiles.sh
 
 compile_split : align_tiles_split.c align_tiles_split.sh
 	@mkdir -p ../../bin  
-	./compile_align_multi_tiles_split.sh
+	./compile_align_tiles_split.sh
 
+copy_scripts: align_tiles.sh align_tiles_split.sh run_align_tiles.sh run_align_tiles_split.sh
+	@mkdir -p ../../bin
+	cp     align_tiles.sh       ../../bin
+	cp run_align_tiles.sh       ../../bin
+	cp     align_tiles_split.sh ../../bin
+	cp run_align_tiles_split.sh ../../bin
 clean: 
-	@rm -f *.o ../../bin/align_multi_tiles*
+	@rm -f *.o ../../bin/align_tiles* ../../bin/run_align_tiles*
 	@rm -rf ../../bin      
-.PHONY : compile compile_split clean
+.PHONY : compile compile_split copy_scripts clean
 
